frontproxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: customer_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: ps-cp
              - match: { prefix: "/" }
                route:
                  cluster: ps-pp
#              cors:
#                allow_methods: GET, PUT, DELETE, POST, OPTIONS
#                allow_headers: keep-alive,user-agent,cache-control,content-type,ontent-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
#                max_age: "1728000"
#                expose_headers: custom-header-1,grpc-status,grpc-message
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
          http_filters:
 #         - name: envoy.grpc_web
 #         - name: envoy.cors
          - name: envoy.router
#  - name: "customer-listener"
#    address:
#      socket_address:
#        address: "0.0.0.0"
#        port_value: 8000
#    filter_chains:
#    - filters:
#      - name: "envoy.http_connection_manager"
#        config:
#          stat_prefix: "egress"
#          codec_type: "AUTO"
#          route_config:
#            name: "customer-route"
#            virtual_hosts:
#            - name: "customer-route"
#              domains: 
#              - "*"
#              routes:
#              - match:
#                  prefix: "/"
#                route:
#                  cluster: "ps-cp"
#          http_filters:
#            - name: envoy.router

#  - name: "productowner-listener"
#    address:
#      socket_address:
#        address: "0.0.0.0"
#        port_value: 8000
#    filter_chains:
#    - filters:
#      - name: "envoy.http_connection_manager"
#        config:
#          stat_prefix: "egress"
#          codec_type: "AUTO"
#          route_config:
#            name: "productowner-route"
#            virtual_hosts:
#            - name: "productowner-route"
#              domains:
#              - "*"
#              routes:
#              - match:
#                  prefix: "/"
#                route:
#                  cluster: "ps-pp"
#          http_filters:
#            - name: envoy.router
  
  clusters:
  - name: ps-cp
    connect_timeout: 60s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: docker.for.mac.localhost, port_value: 8011 }}]
  - name: ps-pp
    connect_timeout: 60s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: docker.for.mac.localhost, port_value: 8013 }}]
